<resources>
    <string name="app_name">Tracker</string>
    <string name="post_error">dada</string>
    <string name="welcome_screen_title">Hope on the Hype Train!</string>
    <string name="welcome_screen_login_now_button_text">Login now</string>
    <string name="welcome_screen_facebook_button_text">Continue with Facebook</string>
    <string name="welcome_screen_sign_up_with_email">Signup with Email</string>


    <string name="login_screen_title">Welcome Back</string>
    <string name="login_facebook_btn_text">Login with Facebook</string>
    <string name="login_or_txt">Or</string>
    <string name="login_email_hint">Email Address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_login_btn_text">Login</string>
    <string name="login_forgot_password_text">Forgotten your password?</string>
    <string name="login_register_now_text">Havent registered yet? Join now</string>
    <string name="login_error_email_invalid">There is no user record corresponding to this identifier. The user may have
        been deleted.
    </string>
    <string name="login_error_password_invalid">The password is invalid or the user does not have a password.</string>


    <string name="register_register_btn_text">Register</string>
    <string name="register_first_name_hint">First name</string>
    <string name="register_last_name_hint">Last name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_view">Listview</string>
    <string name="home">home</string>
    <string name="camera">camera</string>
    <string name="video">video</string>

</resources>

