<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/layout">

    <data>
        <import type="android.view.View"/>
        <variable
                name="LoginViewModel"
                type="com.example.tracker.presentation.ui.login.LoginViewModel"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="24dp"
                android:background="@color/white"
                android:layout_height="wrap_content">

            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:text="@string/login_screen_title"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      android:id="@+id/loginHeader"
                      android:textSize="26sp"
                      android:textStyle="bold"
                      app:layout_constraintTop_toTopOf="parent"
                      android:textAlignment="center"
                      android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <Button
                    android:text="@string/login_facebook_btn_text"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:id="@+id/btnFacebookLogin"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:paddingEnd="32dp"
                    android:paddingStart="32dp"
                    android:textSize="16sp"
                    android:textAlignment="viewStart"
                    android:background="@drawable/round_blue_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginHeader"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    style="@android:style/Widget.TextView"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="start|center" android:paddingLeft="16sp"/>

            <TextView
                    android:text="@string/login_or_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginSubHeader"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    style="@android:style/Widget.TextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAlignment="center"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/btnFacebookLogin"
                    android:layout_marginBottom="23dp"
                    app:layout_constraintBottom_toTopOf="@+id/editText3"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/login_email_hint"
                    android:textStyle="italic"
                    android:textColorHint="@android:color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@={LoginViewModel.emailAddress,default=Placeholder}"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/loginSubHeader"
                    android:id="@+id/editText3"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/login_password_hint"
                    android:ems="10"
                    android:textStyle="italic"
                    android:text="@={LoginViewModel.password,default=Placeholder}"
                    android:textColorHint="@android:color/black"
                    android:id="@+id/editText2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/editText3"/>

            <Button
                    android:text="@string/login_login_btn_text"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:paddingStart="32dp"
                    android:gravity="start|center"
                    android:paddingEnd="32dp"
                    android:onClick="@{(v) -> LoginViewModel.onLoginButtonClick(v)}"
                    android:background="@drawable/round_transparent_button"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    style="@android:style/Widget.TextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/btnLogin"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"/>

            <TextView
                    android:id="@+id/txtForgotPassword"
                    android:text="@string/login_forgot_password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                    android:layout_marginTop="16dp"/>

            <TextView
                    android:text="@string/login_register_now_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/txtRegisterNow"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                    tools:text="The password is invalid or the user does not have a password."
                    android:textColor="@color/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:id="@+id/textView2"
                    android:text="@{LoginViewModel.errorMessage}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText2"
                    android:layout_marginTop="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>

