<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout">

    <data>
        <import type="android.view.View"/>
        <variable
                name="WelcomeViewModel"
                type="com.example.tracker.presentation.ui.welcome.WelcomeViewModel"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:background="@color/white"

            android:layout_height="match_parent"
            tools:context=".presentation.ui.welcome.WelcomeFragment">

        <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
                      android:layout_weight="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/welcome_screen_title"/>

        </LinearLayout>

        <ImageView
                android:layout_weight="3"
                android:src="@android:drawable/picture_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:layout_weight="2.5"
                android:layout_height="0dp">

            <Button
                    android:id="@+id/login_now_button"
                    android:layout_width="match_parent"
                    android:background="@drawable/round_gray_button"
                    android:layout_gravity="center|bottom"
                    android:layout_marginTop="16dp"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:text="@string/welcome_screen_login_now_button_text"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/login_facebook_button"
                    android:layout_width="match_parent"
                    android:layout_gravity="center|bottom"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:text="@string/welcome_screen_facebook_button_text"
                    android:background="@drawable/round_blue_button"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_gravity="center|bottom"
                    android:textAllCaps="false"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@android:color/black"
                    android:text="@string/welcome_screen_sign_up_with_email"
                    android:background="@drawable/round_transparent_button"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</layout>
