<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/layout">

    <data>
        <import type="android.view.View"/>
        <variable
                name="RegisterViewModel"
                type="com.example.tracker.presentation.ui.register.RegisterViewModel"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="24dp"
                android:background="@color/white"
                android:layout_height="wrap_content">


            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/login_password_hint"
                    android:ems="10"
                    android:textStyle="italic"
                    android:text="@={RegisterViewModel.registerViewBindings.userPassWord,default=Placeholder}"
                    android:textColorHint="@android:color/black"
                    android:id="@+id/editText2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.666" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/e"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/login_email_hint"
                    android:textStyle="italic"
                    android:textColorHint="@android:color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@={RegisterViewModel.registerViewBindings.userEmail,default=Email}"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/e"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toTopOf="parent"/>

            <Button
                    android:text="@string/register_register_btn_text"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:paddingStart="32dp"
                    android:gravity="start|center"
                    android:paddingEnd="32dp"
                    android:onClick="@{(v) -> RegisterViewModel.onRegisterButtonClick(v)}"
                    android:background="@drawable/round_transparent_button"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    style="@android:style/Widget.TextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/btnLogin"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                    tools:text="The password is invalid or the user does not have a password."
                    android:textColor="@color/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:id="@+id/txtErrorView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText2"
                    android:layout_marginTop="16dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>

